<resources>
    <string name="app_name">FTC Score Calculator</string>
    <string name="aut_duck_delivered">Ducks Delivered</string>
    <string name="aut_in_storage_unit">In Storage Unit</string>
    <string name="aut_completely_in_storage_unit">Completely in Storage Unit</string>
    <string name="aut_in_warehouse">In Warehouse</string>
    <string name="aut_completely_in_warehouse">Completely in Warehouse</string>
    <string name="aut_freight_storage_unit">Freight in Storage Unit</string>
    <string name="aut_freight_storage_hub">Freight in Storage Hub</string>
    <string name="aut_preload_duck">Duck Deposited on Level</string>
    <string name="aut_preload_shipping_equipment">Shipping Equipment Deposited</string>
    <string name="tel_freight_storage_unit">Freight in Storage Unit</string>
    <string name="tel_level_1">Low Level</string>
    <string name="tel_level_2">Mid Level</string>
    <string name="tel_level_3">Top Level</string>
    <string name="tel_shared_shipping_hub">Freight in Shared Hub</string>
    <string name="end_freight_storage_unit">Freight in Storage Unit</string>
    <string name="end_level_1">Low Level</string>
    <string name="end_level_2">Mid Level</string>
    <string name="end_level_3">Top Level</string>
    <string name="end_shared_shipping_hub">Freight in Shared Hub</string>
    <string name="end_element_delivered">Duck/Element Delivered</string>
    <string name="end_alliance_hub_balanced">Alliance Hub Balanced</string>
    <string name="end_shared_hub_unbalanced">Shared Hub Unbalanced</string>
    <string name="end_parked_in_warehouse">Parked in Warehouse</string>
    <string name="end_completely_parked_in_warehouse">Completely in Warehouse</string>
    <string name="end_team_shipping_elements">Team Shipping Elements</string>
    <!-- Strings used for fragments for navigation -->
<!--    public int EndFreightStorageUnit; // 1-->
<!--    public int EndLevel1; // 2-->
<!--    public int EndLevel2; // 4-->
<!--    public int EndLevel3; // 6-->
<!--    public int EndFreightSharedShippingHub; // 4-->
<!--    public boolean EndElementDelivered; // 6-->
<!--    public boolean EndAllianceShippingHubBalanced; // 10-->
<!--    public boolean EndSharedShippingHubUnbalanced; // 20-->
<!--    public boolean EndParkedInWarehouse; // 3-->
<!--    public boolean EndParkedCompletelyInWarehouse; // 6-->
<!--    public int EndNumberTeamShippingElements; // 15-->

    <string name="top_goals">Top Goals</string>
    <string name="top_goals_add">Top Goals Add</string>
    <string name="top_goals_subtract">Top Goals Subtract</string>
    <string name="middle_goals">Mid Goals</string>
    <string name="low_goals">Low Goals</string>
    <string name="top_goals_hint">Top Goals</string>
    <string name="middle_goals_hint">Mid Goals</string>
    <string name="low_goals_hint">Low Goals</string>
    <string name="total_points">Total Points</string>
    <string name="zero_points">0</string>
    <string name="stopped_on_line">Stopped On Line</string>
    <string name="wobble_goal_deposited">Wobble Goal Deposited</string>
    <string name="powershot_aut">Power Shots</string>
    <string name="top_goals_telly">Top Goals</string>
    <string name="middle_goals_telly">Mid Goals</string>
    <string name="low_goals_telly">Low Goals</string>
    <string name="autonomous_score">0</string>
    <string name="autonomous">Autonomous</string>
    <string name="todo">Todo</string>
    <string name="teleops">Teleop</string>
    <string name="teleops_score">0</string>
    <string name="top_goals_end">Top Goals</string>
    <string name="middle_goals_end">Middle Goals</string>
    <string name="low_goals_end">Low Goals</string>
    <string name="endgame_score">0</string>
    <string name="endgame">Endgame</string>
    <string name="powershot_end"># Power Shots</string>
    <string name="wobble_ring">Wobble Rings</string>
    <string name="drop_zone">Wobble In Drop Zone</string>
    <string name="start_line_park">Start Line Park</string>
    <string name="splash_screen_text">FTC Unofficial\nScore Calculator</string>
    <string name="logo">Logo</string>
    <string name="author">#14564 Fast and Curious</string>
    <string name="penalty">Penalty</string>
    <string name="penalty_minor">Penalty Minor</string>
    <string name="penalty_major">Penalty Major</string>
    <string name="title_progress">Progress</string>
    <string name="title_home">Home</string>
    <string name="title_calculator">Calculator</string>
    <string name="HomeFragment">Test1234</string>
    <string name="SaveScores">Save Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Test</string>
    <string name="LogoutButton">Logout</string>
    <string name="find_team">Find My Team</string>
    <string name="select_state">Team State</string>
    <string name="eula_short">I agree to always showing gracious professionalism, and to the usage terms outline here.</string>
    <string name="run_number">Run #</string>
    <string name="kudos">Kudos</string>
    <string name="kudo_number">0</string>
    <string name="title_team">My Team</string>
    <string name="TeamName">Team Name</string>
    <string name="TeamNumber">#</string>
    <string name="ClearScores">Clear Score</string>
    <string name="enter_youtube_video_id">Enter YouTube Video ID (text after watch?v=)</string>
    <string name="placeholder_blank" />
</resources>