<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.ftcscorecalculatorbeta.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ftcscorecalculatorbeta.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.ftcscorecalculatorbeta.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />


</navigation>
