<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4da6ff"
    android:gravity="center">

    <TextView
        android:layout_width="375dp"
        android:layout_height="match_parent"
        android:text="@string/splash_screen_text"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textAlignment="center"
        android:gravity="top"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ultimate_goal_banner"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:text="@string/author"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />


</RelativeLayout>